update fix err scrollBar

--- a/src/components/Admin/admin.scss
+++ b/src/components/Admin/admin.scss
@@ -44,5 +44,9 @@
         font-size: 40px;
       }
     }
+
+    .admin__main{
+      height: calc(100vh - 40px);
+    }
   }
 }
